2007-05-24  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-note.c (hildon_note_init): Use g_object_ref_sink
	instead of g_object_ref + gtk_object_sink.

2007-05-22  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.6-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c: A few more GdkColor struct allocation fixes
	straight from Tommi labs.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-finger-example.c: Correcting the header file path.

	* src/hildon-color-chooser-dialog.c: Allocate the color on the stack for 
	the changed signal. Fixes a small memory leak.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* autogen.sh:
	* debian/rules:
	* src/hildon-banner.c: Importing several usefull fixes from the
	ubuntu-mobile branch.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-finger-example.c: Adding a finger-checking code
	example. 

	* src/hildon-font-selection-dialog.c: Do not allocate the color
	structure using the g_new. Fixes NB#54061.

2007-05-09  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Correcting tabs in file.

2007-05-08  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c: Use set_child_visible only to
	control the visibility of the children.

	* examples/hildon-bread-crumb-trail-example.c: Plug leak.

2007-05-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.5-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-05-04  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c:
	(hildon_bread_crumb_trail_size_allocate): 

	Make the back button always a square.

2007-05-04  Xan Lopez  <xan.lopez@nokia.com>
