@@ -3092,6 +3092,7 @@ calendar_timer                                  (gpointer data)
 
     settings = gtk_settings_get_default ();
     g_object_get (settings, "gtk-timeout-repeat", &timeout, NULL);
+    timeout *= 5;
 
     GDK_THREADS_ENTER ();
 
@@ -3125,6 +3126,7 @@ start_spinning                                  (GtkWidget *widget,
 
     settings = gtk_settings_get_default ();
     g_object_get (settings, "gtk-timeout-repeat", &timeout, NULL);
+    timeout *= 5;
 
     private_data->click_child = click_child;
 
